Fault Correction in Recommend view and ClaimsController, regarding Rekommenderat Belopp och Avslaget Belopp

--- a/Sjuklöner/Views/Claims/Recommend.cshtml
+++ b/Sjuklöner/Views/Claims/Recommend.cshtml
@@ -379,10 +379,10 @@
     
     <div class="row">
         <div class="col col-md-offset-4">
-        @if (User.IsInRole("AdministrativeOfficial") && Model.InInbox == true)
-        {
-            @Html.ActionLink("För över till Procapita", "Transfer", new { refNumber = Model.ClaimNumber }, new { @class = "btn btn-primary btn-primary-wide2" })
-        }
+            @if (User.IsInRole("AdministrativeOfficial") && Model.InInbox == true)
+           {      
+               <input type="submit" value="För över till Procapita" name="submitButton" class="btn btn-primary btn-primary-extra-wide" id="confirm" />      
+           }
         </div>
     </div>
       
