--- a/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmin.cshtml
@@ -156,13 +156,13 @@
                         <th class="small-col">
                             Sista sjukdag
                         </th>
-                        @*<th class="small-col">
-                                Antal sjukdagar
-                            </th>*@
-                        <th class="medium-col">
+                        @*<th class="small-col-admin">
+            Antal sjukdagar
+        </th>*@
+                        <th class="small-col">
                             Yrkat belopp (Kr)
                         </th>
-                        <th></th>
+                        <th class="small-col"></th>                       
                     </tr>
 
                     @foreach (var item in Model.UnderReviewClaims)
@@ -231,40 +231,40 @@
             {
                 <table class="table">
                     <tr>
-                        <th class="small-col">
+                        <th class="small-col-admin">
                             Referensnummer
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-admin">
                             Beslutsdatum
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-admin">
                             Assistansbolag
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-admin">
                             Assistentens personnummer
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-admin">
                             Handläggare
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-admin">
                             Kundens personnummer
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-admin">
                             Första sjukdag
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-admin">
                             Sista sjukdag
                         </th>
-                        @*<th class="small-col">
+                        @*<th class="small-col-admin">
                                 Antal sjukdagar
                             </th>*@
-                        <th class="medium-col">
+                        <th class="small-col-admin">
                             Yrkat belopp (Kr)
                         </th>
-                        <th class="small-col">
+                        <th class="small-col-admin">
                             Godkänt belopp (Kr)
                         </th>
-                        <th class="medium-col">
+                        <th class="small-col-admin">
                             Avslaget belopp (Kr)
                         </th>
                         <th></th>
