--- a/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageOmbud.cshtml
@@ -19,7 +19,7 @@
         else
         {
             <div class="col col-md-6 left-margin-12 font-size-16">
-                Välkommen! Du är nu registrerad som ombud för @Model.CompanyName. För att kunna skapa en ansökan krävs information om två assistenter. Den ena är den insjuknade ordinarie assistenten och den andra är den vikarierande assistenten. 
+                Välkommen! Du är nu registrerad som ombud för @Model.CompanyName. För att kunna skapa en ansökan krävs information om två assistenter. Den ena är den insjuknade ordinarie assistenten och den andra är den vikarierande assistenten.
                 <p class="col-no-left-padding">@Html.ActionLink("Klicka här ", "Create", "Assistants", null, null)för att skapa assistenter.</p>
             </div>
         }
@@ -47,28 +47,28 @@
             {
                 <table class="table">
                     <tr>
-                        <th class="small-col-ombud">
+                        <th class="medium-col-ombud">
                             Referensnummer
                         </th>
-                        <th class="small-col-ombud">
+                        <th class="medium-col-ombud">
                             Beslutsdatum
                         </th>
-                        <th class="small-col-ombud">
+                        <th class="medium-col-ombud">
                             Kundens personnummer
                         </th>
-                        <th class="small-col-ombud">
+                        <th class="medium-col-ombud">
                             Första sjukdag
                         </th>
-                        <th class="small-col-ombud">
+                        <th class="medium-col-ombud">
                             Sista sjukdag
                         </th>
-                        <th class="medium-col">
+                        <th class="medium-col-ombud">
                             Yrkat belopp (Kr)
                         </th>
-                        <th class="small-col">
+                        <th class="medium-col-ombud">
                             Godkänt belopp (Kr)
                         </th>
-                        <th class="medium-col">
+                        <th class="medium-col-ombud">
                             Avslaget belopp (Kr)
                         </th>
                         <th></th>
@@ -125,8 +125,8 @@
             }
         </div>
     </div>
+  
     <hr class="claim-divider" />
-
     <div class="row">
         <div class="col">
             <div class="second-page-header">
@@ -160,58 +160,58 @@
                         @*<th class="ssmall-col-ombud">
             Antal sjukdagar
         </th>*@
-                        <th class="medium-col">
+                        <th class="small-col-ombud">
                             Yrkat belopp (Kr)
                         </th>
-                        <th class="table-button-cell"></th>
-                        <th class="table-button-cell"></th>
-                        <th class="table-button-cell"></th>
+                        <th class="small-col-ombud"></th>
+                        <th class="small-col-ombud"></th>
+                        <th></th>
                     </tr>
 
                     @foreach (var item in Model.DraftClaims)
                     {
-                    <tr>
-                        <td>
-                            @*@Html.ActionLink(item.ReferenceNumber, "_ShowClaim", "Claims", new { refNumber = item.ReferenceNumber }, new { @class = "btn btn-primary btn-primary-small" })*@
-                            @Html.ActionLink(item.ReferenceNumber, "_ShowClaim", new { refNumber = item.ReferenceNumber }, new { @class = "btn-sm js-show-view-btn btn btn-primary btn-primary-small" })
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.StatusDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.OmbudEmail)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CompletionStage)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CustomerSSN)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.QualifyingDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                        </td>
-                        @*<td>
-                        @Html.DisplayFor(modelItem => item.NumberOfSickDays)
-                        </td>*@
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ClaimedSum)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Uppdatera", "Create1", new { refNumber = item.ReferenceNumber }, new { @role = "button", @class = "btn btn-secondary btn-secondary-small" })
-                        </td>
-                        <td>
-                            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
-                        </td>
-                        <td>
-                            @*@Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary btn-secondary-small" })*@
-                            @*@Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })*@
-                        </td>
-                    </tr>
+                        <tr>
+                            <td>
+                                @*@Html.ActionLink(item.ReferenceNumber, "_ShowClaim", "Claims", new { refNumber = item.ReferenceNumber }, new { @class = "btn btn-primary btn-primary-small" })*@
+                                @Html.ActionLink(item.ReferenceNumber, "_ShowClaim", new { refNumber = item.ReferenceNumber }, new { @class = "btn-sm js-show-view-btn btn btn-primary btn-primary-small" })
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StatusDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.OmbudEmail)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CompletionStage)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CustomerSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                            </td>
+                            @*<td>
+                                @Html.DisplayFor(modelItem => item.NumberOfSickDays)
+                                </td>*@
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClaimedSum)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Uppdatera", "Create1", new { refNumber = item.ReferenceNumber }, new { @role = "button", @class = "btn btn-secondary btn-secondary-small" })
+                            </td>
+                            <td>
+                                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" })
+                            </td>
+                            <td>
+                                @*@Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary btn-secondary-small" })*@
+                                @*@Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
+                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })*@
+                            </td>
+                        </tr>
                     }
 
                 </table>
@@ -236,25 +236,25 @@
             {
                 <table class="table">
                     <tr>
-                        <th class="small-col-ombud">
+                        <th class="medium-col-ombud">
                             Referensnummer
                         </th>
-                        <th class="small-col-ombud">
+                        <th class="medium-col-ombud">
                             Handläggare
                         </th>
-                        <th class="small-col-ombud">
+                        <th class="medium-col-ombud">
                             Inskickad datum
                         </th>
-                        <th class="small-col-ombud">
+                        <th class="medium-col-ombud">
                             Kundens personnummer
                         </th>
-                        <th class="small-col-ombud">
+                        <th class="medium-col-ombud">
                             Första sjukdag
                         </th>
-                        <th class="small-col-ombud">
+                        <th class="medium-col-ombud">
                             Sista sjukdag
                         </th>
-                        <th class="medium-col">
+                        <th class="medium-col-ombud">
                             Yrkat belopp (Kr)
                         </th>
                         <th></th>
@@ -262,38 +262,38 @@
 
                     @foreach (var item in Model.UnderReviewClaims)
                     {
-                    <tr>
-                        <td>
-                            @Html.ActionLink(item.ReferenceNumber, "_ShowClaim", new { refNumber = item.ReferenceNumber }, new { @class = "btn-sm js-show-view-btn btn btn-primary btn-primary-small" })
-                            @*@Html.ActionLink(item.ReferenceNumber, "ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber }, new { @class = "btn btn-primary btn-primary-small" })*@
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.AdmOffName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.StatusDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CustomerSSN)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.QualifyingDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ClaimedSum)
-                        </td>
-                        <td>
-                            @*@Html.ActionLink("Uppdatera", "Create", new { id = item.Id }, new { @class = "btn btn-success btn-success-small" }) |
-            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" }) |
-            @Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary btn-secondary-small" })*@
-                            @*@Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })*@
-                        </td>
-                    </tr>
+                        <tr>
+                            <td>
+                                @Html.ActionLink(item.ReferenceNumber, "_ShowClaim", new { refNumber = item.ReferenceNumber }, new { @class = "btn-sm js-show-view-btn btn btn-primary btn-primary-small" })
+                                @*@Html.ActionLink(item.ReferenceNumber, "ShowClaimDetails", "Claims", new { referenceNumber = item.ReferenceNumber }, new { @class = "btn btn-primary btn-primary-small" })*@
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.AdmOffName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StatusDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CustomerSSN)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.QualifyingDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.LastDayOfSicknessDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClaimedSum)
+                            </td>
+                            <td>
+                                @*@Html.ActionLink("Uppdatera", "Create", new { id = item.Id }, new { @class = "btn btn-success btn-success-small" }) |
+                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-danger-small" }) |
+                                    @Html.ActionLink("Skicka in", "SaveAmounts", new { id = item.Id }, new { @class = "btn btn-secondary btn-secondary-small" })*@
+                                @*@Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                                    @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
+                                    @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })*@
+                            </td>
+                        </tr>
                     }
                 </table>
             }
