--- a/Sjuklöner/Views/Claims/Recommend.cshtml
+++ b/Sjuklöner/Views/Claims/Recommend.cshtml
@@ -338,124 +338,144 @@
                     @Html.DisplayFor(model => model.ModelSum)
                 </div>
             </div>
-        </div>
-    </div>
+            @if (Model.InInbox == false)
+            {
 
-    <div class="row">
-        <div class="form-horizontal">
-            <div class="form-group margin-bottom-small col line-height-10">
-                @Html.LabelFor(model => model.ApprovedSum, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4 highlight-green" })
-                <div class="col col-md-1">
-                    @Html.EditorFor(model => model.ApprovedSum, new { htmlAttributes = new { @class = "form-control large-form-control2 control-width-small2 highlight-green", id = "approvedsum", onblur = "calculateSum(1)" } })
-                    @Html.ValidationMessageFor(model => model.ApprovedSum, null, new { @class = "text-danger" }, null)
+                <div class="form-group margin-bottom-small col line-height-06">
+                    @Html.LabelFor(model => model.ApprovedSum, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
+                    <div class="col-md-8 align-bottom7 display-result decision-padding-left2" id="approvedsum">
+                        @Html.DisplayFor(model => model.ApprovedSum)
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="form-horizontal">
-            <div class="form-group margin-bottom-small col line-height-10">
-                @Html.LabelFor(model => model.RejectedSum, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4 highlight-red" })
-                <div class="col col-md-1">
-                    @Html.EditorFor(model => model.RejectedSum, new { htmlAttributes = new { @class = "form-control large-form-control2 control-width-small2 highlight-red", id = "rejectedsum", onblur = "calculateSum(2)" } })
-                    @Html.ValidationMessageFor(model => model.RejectedSum, null, new { @class = "text-danger" }, null)
+                <div class="form-group margin-bottom-small col line-height-06">
+                    @Html.LabelFor(model => model.RejectedSum, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
+                    <div class="col-md-8 align-bottom7 display-result decision-padding-left2" id="rejectedsum">
+                        @Html.DisplayFor(model => model.RejectedSum)
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="form-horizontal">
-            <div class="form-group margin-bottom-small col line-height-10">
-                @Html.LabelFor(model => model.RejectReason, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4 highlight-red" })
-                <div class="col col-md-8">
-                    @Html.EditorFor(model => model.RejectReason, new { htmlAttributes = new { @style = "max-width:100% !important;", @class = "control-width2 form-control large-form-control2 highlight-red", rows = 3, id = "rejectedsum", onblur = "calculateSum(2)" } })
-                    @Html.ValidationMessageFor(model => model.RejectReason, null, new { @class = "text-danger" }, null)
+                @Html.LabelFor(model => model.RejectReason, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
+                <div class="col-md-8 align-bottom7 display-result decision-padding-left2" id="rejectedreason">
+                    @Html.DisplayFor(model => model.RejectReason)
                 </div>
-            </div>
-        </div>
-    </div>          
-    
-    <div class="row">
-        <div class="col col-md-offset-4">
-            @if (User.IsInRole("AdministrativeOfficial") && Model.InInbox == true)
-           {      
-               <input type="submit" value="För över till Procapita" name="submitButton" class="btn btn-primary btn-primary-extra-wide" id="confirm" />      
-           }
+
+            }
         </div>
     </div>
-      
-        <div class="row">
-            <p class="col col-md-4 second-page-header4">Automatiserade överföringar</p>
-        </div>
-
+    if (User.IsInRole("AdministrativeOfficial") && Model.InInbox == true)
+    {
         <div class="row">
             <div class="form-horizontal">
-
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-                <div class="form-group margin-bottom-small col line-height-06">
-                    @Html.LabelFor(model => model.BasisForDecision, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
-                    @if (!Model.BasisForDecision)
-                    {
-                        <div class="col-md-8 align-bottom6 display-result decision-padding-left negative-result" id="ProCapitaCheck">
-                            <img class="check-result-img" src="~/Content/Images/red.jpg" />@Html.DisplayFor(model => Model.BasisForDecisionMsg)
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="col-md-8 align-bottom6 display-result decision-padding-left positive-result" id="ProCapitaCheck">
-                            <img class="check-result-img" src="~/Content/Images/green.png" />@Html.DisplayFor(model => Model.BasisForDecisionMsg)
-                        </div>
-                    }
-                </div>
-
-                <div class="form-group margin-bottom-small col line-height-06">
-                    @Html.LabelFor(model => model.Decision, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
-                    @if (!Model.Decision)
-                    {
-                        <div class="col-md-8 align-bottom8 display-result decision-padding-left negative-result" id="ProCapitaCheck">
-                            <img class="check-result-img" src="~/Content/Images/red.jpg" />@Html.DisplayFor(model => Model.DecisionMsg)
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="col-md-8 align-bottom8 display-result decision-padding-left positive-result" id="ProCapitaCheck">
-                            <img class="check-result-img" src="~/Content/Images/green.png" />@Html.DisplayFor(model => Model.DecisionMsg)
-                        </div>
-                    }
-                </div>
-
-            </div>
-        </div>
-
-        <div class="row line-height-10">
-            @*<div class="col col-md-offset-6 col-md-1">
-                    <input class="btn btn-primary" type="submit" value="Nästa steg" style="margin-left: 0px;"/>
-                </div>
-                <div class="col col-md-1">
-
-                    @*Html.ActionLink("Detaljer", "ShowClaimDetails", "Claims", new { referenceNumber = Model.ClaimNumber }, new { @class = "btn btn-primary" })*
-                </div>*@
-            <div class="hidden-by-default" id="claimnumber">@Model.ClaimNumber</div>
-            <div id='myModal' class='modal' style="text-align:left;">
-                <div class="modal-dialog" style="width:85%; height:400px; padding:10px;">
-                    <div class="modal-content" style="overflow: auto; padding:10px; background-color:#fbf9ef;">
-                        <button type="button" id="closbtn" float="right"> Stäng </button>
-                        <div style="height:10px;">
-                        </div>
-                        <div id='myModalContent' style="width:1200px; height:400px; padding:10px;">
-                        </div>
+                <div class="form-group margin-bottom-small col line-height-10">
+                    @Html.LabelFor(model => model.ApprovedSum, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4 highlight-green" })
+                    <div class="col col-md-1">
+                        @Html.EditorFor(model => model.ApprovedSum, new { htmlAttributes = new { @class = "form-control large-form-control2 control-width-small2 highlight-green", id = "approvedsum", onblur = "calculateSum(1)" } })
+                        @Html.ValidationMessageFor(model => model.ApprovedSum, null, new { @class = "text-danger" }, null)
                     </div>
                 </div>
             </div>
         </div>
 
+        <div class="row">
+            <div class="form-horizontal">
+                <div class="form-group margin-bottom-small col line-height-10">
+                    @Html.LabelFor(model => model.RejectedSum, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4 highlight-red" })
+                    <div class="col col-md-1">
+                        @Html.EditorFor(model => model.RejectedSum, new { htmlAttributes = new { @class = "form-control large-form-control2 control-width-small2 highlight-red", id = "rejectedsum", onblur = "calculateSum(2)" } })
+                        @Html.ValidationMessageFor(model => model.RejectedSum, null, new { @class = "text-danger" }, null)
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="form-horizontal">
+                <div class="form-group margin-bottom-small col line-height-10">
+                    @Html.LabelFor(model => model.RejectReason, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4 highlight-red" })
+                    <div class="col col-md-8">
+                        @Html.EditorFor(model => model.RejectReason, new { htmlAttributes = new { @style = "max-width:100% !important;", @class = "control-width2 form-control large-form-control2 highlight-red", rows = 3, id = "rejectedsum", onblur = "calculateSum(2)" } })
+                        @Html.ValidationMessageFor(model => model.RejectReason, null, new { @class = "text-danger" }, null)
+                    </div>
+                </div>
+            </div>
+        </div>       
+        <div class="row">
+            <div class="col col-md-offset-4">
+                <input type="submit" value="För över till Procapita" name="submitButton" class="btn btn-primary btn-primary-extra-wide" id="confirm" />
 
-
+            </div>
+        </div>
     }
+
+    <div class="row">
+        <p class="col col-md-4 second-page-header4">Automatiserade överföringar</p>
+    </div>
+
+    <div class="row">
+        <div class="form-horizontal">
+
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            <div class="form-group margin-bottom-small col line-height-06">
+                @Html.LabelFor(model => model.BasisForDecision, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
+                @if (!Model.BasisForDecision)
+                {
+                    <div class="col-md-8 align-bottom6 display-result decision-padding-left negative-result" id="ProCapitaCheck">
+                        <img class="check-result-img" src="~/Content/Images/red.jpg" />@Html.DisplayFor(model => Model.BasisForDecisionMsg)
+                    </div>
+                }
+                else
+                {
+                    <div class="col-md-8 align-bottom6 display-result decision-padding-left positive-result" id="ProCapitaCheck">
+                        <img class="check-result-img" src="~/Content/Images/green.png" />@Html.DisplayFor(model => Model.BasisForDecisionMsg)
+                    </div>
+                }
+            </div>
+
+            <div class="form-group margin-bottom-small col line-height-06">
+                @Html.LabelFor(model => model.Decision, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
+                @if (!Model.Decision)
+                {
+                    <div class="col-md-8 align-bottom8 display-result decision-padding-left negative-result" id="ProCapitaCheck">
+                        <img class="check-result-img" src="~/Content/Images/red.jpg" />@Html.DisplayFor(model => Model.DecisionMsg)
+                    </div>
+                }
+                else
+                {
+                    <div class="col-md-8 align-bottom8 display-result decision-padding-left positive-result" id="ProCapitaCheck">
+                        <img class="check-result-img" src="~/Content/Images/green.png" />@Html.DisplayFor(model => Model.DecisionMsg)
+                    </div>
+                }
+            </div>
+
+        </div>
+    </div>
+
+    <div class="row line-height-10">
+        @*<div class="col col-md-offset-6 col-md-1">
+                <input class="btn btn-primary" type="submit" value="Nästa steg" style="margin-left: 0px;"/>
+            </div>
+            <div class="col col-md-1">
+
+                @*Html.ActionLink("Detaljer", "ShowClaimDetails", "Claims", new { referenceNumber = Model.ClaimNumber }, new { @class = "btn btn-primary" })*
+            </div>*@
+        <div class="hidden-by-default" id="claimnumber">@Model.ClaimNumber</div>
+        <div id='myModal' class='modal' style="text-align:left;">
+            <div class="modal-dialog" style="width:85%; height:400px; padding:10px;">
+                <div class="modal-content" style="overflow: auto; padding:10px; background-color:#fbf9ef;">
+                    <button type="button" id="closbtn" float="right"> Stäng </button>
+                    <div style="height:10px;">
+                    </div>
+                    <div id='myModalContent' style="width:1200px; height:400px; padding:10px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+}
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
