--- a/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
+++ b/Sjuklöner/Views/Claims/IndexPageAdmOff.cshtml
@@ -74,7 +74,7 @@
                             @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.StatusDate)
+                            @Html.DisplayFor(modelItem => item.SentInDate)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.CompanyName)
@@ -170,7 +170,7 @@
                             @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.StatusDate)
+                            @Html.DisplayFor(modelItem => item.SentInDate)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.CompanyName)
@@ -272,7 +272,7 @@
                             @Html.ActionLink(item.ReferenceNumber, "Recommend", "Claims", new { id = item.Id }, new { @class = "btn btn-primary btn-primary-small" })
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.StatusDate)
+                            @Html.DisplayFor(modelItem => item.DecisionDate)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.CompanyName)
