Added DecisionCandidate class. The robot will add a new record into the table after transferring the claim to Procapita. The robot will delete the record when the robot detects that a decision has been made about the claim in Procapita.

--- a/Sjuklöner/Views/Claims/Recommend.cshtml
+++ b/Sjuklöner/Views/Claims/Recommend.cshtml
@@ -356,7 +356,7 @@
             if (Decimal.Parse(Model.RejectedSum) > 0)
             {
                @Html.LabelFor(model => model.RejectReason, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
-               <div class="col-md-8 align-bottom7 display-result decision-padding-left2" id="rejectedreason">
+               <div class="col-md-8 align-bottom7 display-result decision-padding-left" id="rejectedreason">
                    @Html.DisplayFor(model => model.RejectReason)
                </div>
             }
