Started exploring ways to implement support for more than one substitute assistant in the same claim. Changes have been commented out temporarily.

--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -1434,6 +1434,10 @@ negative-left-margin {
     padding-left: 10px;
 }
 
+.xsmall-col-padding {
+    padding-left: 0;
+}
+
 .negative-col-padding {
     padding-left: -7px;
 }
