--- a/Sjuklöner/Views/Claims/Recommend.cshtml
+++ b/Sjuklöner/Views/Claims/Recommend.cshtml
@@ -234,7 +234,7 @@
                 }
             </div>
 
-            <div class="form-group margin-bottom-small col line-height-06">
+            @*<div class="form-group margin-bottom-small col line-height-06">
                 @Html.LabelFor(model => model.SalarySpecSubAssistantCheck, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
                 @if (!Model.SalarySpecSubAssistantCheck)
                 {
@@ -248,7 +248,7 @@
                         <img class="check-result-img" src="~/Content/Images/green.png" />@Html.DisplayFor(model => Model.SalarySpecSubAssistantCheckMsg)
                     </div>
                 }
-            </div>
+            </div>*@
 
             <div class="form-group margin-bottom-small col line-height-06">
                 @Html.LabelFor(model => model.SickleaveNotificationCheck, htmlAttributes: new { @class = "control-label control-label-large2 col-md-4" })
