Remove link to subass salary spec in modal.

--- a/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
@@ -763,7 +763,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-md-5">
+                    @*<div class="col col-md-5">
                         <div class="form-group line-height-12">
                             <div class="row display-padding6">
                                 <a target="_blank" href="@Href($"~/Uploads/{Model.ReferenceNumber}/{Model.Documents.Where(d => d.Title == "SalaryAttachmentStandIn").FirstOrDefault().Filename}")">
@@ -771,7 +771,7 @@
                                 </a>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
                 <div class="row">
                     <div class="col col-md-5">
